--- a/index.html
+++ b/index.html
@@ -256,15 +256,20 @@
     <ul>
       <li><a href="#">Accueil</a></li>
       <li class="has-submenu">
-        <a href="#">Nos actions</a>
+        <a href="#">Assignments</a>
         <ul class="submenu">
           <li><a href="#">Éducation</a></li>
           <li><a href="#">Santé</a></li>
-          <li><a href="#">Agriculture</a></li>
+          <li><a href="#">Entrepreneuriat</a></li>
         </ul>
       </li>
-      <li><a href="#">Galerie</a></li>
-      <li><a href="#">Nous contacter</a></li>
+      <li><a href="#">A la une</a></li>
+      <li class="has-submenu">
+        <a href="#">A propos</a>
+        <ul class="submenu">
+          <li><a href="#">Inscription</a></li>
+          <li><a href="#">Faire un don</a></li>
+          <li><a href="#">Biographie</a></li>
     </ul>
   </nav>
 
