--- a/index.html
+++ b/index.html
@@ -14,95 +14,74 @@
       background-color: #fff;
     }
 
-    /* MENU DÉROULANT */
-nav {
-  background-color: #001F3F;
-  padding: 10px 0;
-  position: sticky;
-  top: 0;
-  z-index: 999;
-  overflow: hidden;
-}
+    nav {
+      background-color: #001F3F;
+      padding: 10px 0;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+      overflow: hidden;
+    }
 
-nav ul {
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  flex-wrap: nowrap; /* ligne unique */
-}
+    nav ul {
+      list-style-type: none;
+      display: flex;
+      justify-content: center;
+      margin: 0;
+      padding: 0;
+    }
 
-nav ul li {
-  margin: 0 15px;
-  position: relative;
-  flex-shrink: 1;
-  min-width: 0;
-}
+    nav ul li {
+      margin: 0 15px;
+      position: relative;
+    }
 
-nav ul li a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 8px 12px;
-  transition: background-color 0.3s;
-  display: block;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-size: 16px;
-}
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 8px 12px;
+      transition: background-color 0.3s;
+      display: block;
+      white-space: nowrap;
+    }
 
-nav ul li a:hover {
-  background-color: #007BFF;
-  border-radius: 4px;
-}
+    nav ul li a:hover {
+      background-color: #007BFF;
+      border-radius: 4px;
+    }
 
-.has-submenu .submenu {
-  display: none;
-  position: absolute;
-  background-color: #001F3F;
-  top: 100%;
-  left: 0;
-  min-width: 160px;
-  z-index: 1000;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  border-radius: 4px;
-}
+    .has-submenu .submenu {
+      display: none;
+      position: absolute;
+      background-color: #001F3F;
+      top: 100%;
+      left: 0;
+      min-width: 160px;
+      z-index: 1000;
+      border-radius: 4px;
+    }
 
-.has-submenu:hover .submenu {
-  display: block;
-}
+    .has-submenu:hover .submenu {
+      display: block;
+    }
 
-.submenu li {
-  display: block;
-  margin: 0;
-}
+    .submenu li a {
+      padding: 10px 15px;
+      display: block;
+    }
 
-.submenu li a {
-  display: block;
-  padding: 10px 15px;
-  color: #fff;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-}
+    @media (max-width: 600px) {
+      nav ul li {
+        margin: 0 6px;
+      }
 
-.submenu li a:hover {
-  background-color: #007BFF;
-}
+      nav ul li a {
+        font-size: 12px;
+        padding: 6px 8px;
+      }
+    }
 
-@media (max-width: 600px) {
-  nav ul li {
-    margin: 0 6px;
-  }
-
-  nav ul li a {
-    font-size: 12px;
-    padding: 6px 8px;
-  }
-}
-
-    /* CENTRAGE VIDÉO */
     .video-mask-container {
       display: flex;
       justify-content: center;
@@ -135,7 +114,6 @@ nav ul li a:hover {
       filter: brightness(1.1);
     }
 
-    /* BOUTON COEUR */
     .heart-button {
       position: fixed;
       top: 20px;
@@ -147,9 +125,7 @@ nav ul li a:hover {
       -webkit-mask-size: contain;
       mask-size: contain;
       mask-repeat: no-repeat;
-      -webkit-mask-repeat: no-repeat;
       mask-position: center;
-      -webkit-mask-position: center;
       animation: pulse 1.5s ease-in-out infinite, explode-rebuild 3s infinite;
       cursor: pointer;
       border: none;
@@ -171,7 +147,6 @@ nav ul li a:hover {
       line-height: 50px;
       text-align: center;
       pointer-events: none;
-      animation: pulse 1.5s ease-in-out infinite, explode-rebuild 3s infinite;
     }
 
     @keyframes pulse {
@@ -189,42 +164,33 @@ nav ul li a:hover {
     }
 
     .info-text {
-      width: 90vw;
       max-width: 960px;
       background-color: rgba(255, 255, 255, 0.95);
       color: #333;
       padding: 20px;
       margin: 30px auto 0 auto;
       border-radius: 8px;
-      box-sizing: border-box;
       font-size: 1rem;
-      line-height: 1.5;
       text-align: justify;
     }
 
     .a-la-une {
-      max-width: 100vw;
       padding: 20px 10px;
       background: #fff;
-      box-sizing: border-box;
       margin-top: 30px;
       color: #333;
     }
 
     .a-la-une h2 {
-      margin-bottom: 15px;
       text-align: center;
       font-weight: bold;
-      font-size: 1.6rem;
     }
 
     .carousel-container {
-      width: 100%;
       max-width: 960px;
       margin: 0 auto;
       overflow: hidden;
       position: relative;
-      box-sizing: border-box;
     }
 
     .carousel-track {
@@ -235,15 +201,7 @@ nav ul li a:hover {
 
     .carousel-item {
       flex: 0 0 33.3333%;
-      box-sizing: border-box;
-      padding: 0 10px;
       text-align: center;
-    }
-
-    .carousel-item img {
-      width: 100%;
-      height: auto;
-      object-fit: contain;
     }
 
     .carousel-item p {
@@ -252,24 +210,31 @@ nav ul li a:hover {
       color: #222;
     }
 
+    .image-wrapper {
+      position: relative;
+      width: 100%;
+      padding-top: 75%; /* 4:3 aspect ratio */
+      overflow: hidden;
+      border-radius: 8px;
+    }
+
+    .image-wrapper img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      top: 0;
+      left: 0;
+    }
+
     @keyframes slide-left {
       0% { transform: translateX(0); }
       100% { transform: translateX(-300%); }
-    }
-
-    @media (max-width: 900px) {
-      .carousel-item img { height: 120px; }
-    }
-
-    @media (max-width: 600px) {
-      .carousel-item img { height: 100px; }
-      .carousel-item p { font-size: 12px; }
     }
   </style>
 </head>
 <body>
 
-  <!-- Menu navigation -->
   <nav>
     <ul>
       <li><a href="#">Accueil</a></li>
@@ -288,13 +253,13 @@ nav ul li a:hover {
           <li><a href="#">Inscription</a></li>
           <li><a href="#">Faire un don</a></li>
           <li><a href="#">Biographie</a></li>
+        </ul>
+      </li>
     </ul>
   </nav>
 
-  <!-- Bouton faire un don -->
   <a href="index.html" class="heart-button" title="Retour 💙"></a>
 
-  <!-- Vidéo au centre -->
   <div class="video-mask-container">
     <div class="video-mask">
       <video autoplay muted loop playsinline>
@@ -304,31 +269,31 @@ nav ul li a:hover {
     </div>
   </div>
 
-  <!-- Texte explicatif -->
   <div class="info-text">
-    La Fondation NSIMIRE MUZIGIRWA Elodie est une association sans but lucratif de droit congolais, œuvrant dans le domaine de l'éducation, santé, sécurité alimentaire, agriculture pêche et élevage, sécurité de revenu pour les personnes vulnérables, promotion de l'entrepreneuriat et genre. L'encadrement de jeunes, femmes et enfants vulnérables (enfants orphelins et enfants non accompagnés).
+    La Fondation NSIMIRE MUZIGIRWA Elodie est une association sans but lucratif de droit congolais, œuvrant dans le domaine de l'éducation, santé, sécurité alimentaire, agriculture pêche et élevage, sécurité de revenu pour les personnes vulnérables, promotion de l'entrepreneuriat et genre.
   </div>
 
-  <!-- Section À la Une -->
   <section class="a-la-une">
     <h2>À la Une</h2>
     <div class="carousel-container">
       <div class="carousel-track">
-        <div class="carousel-item"><img src="IMG-20250602-WA0054.jpg"><p>L'encouragment et l'assistance aux finalites</p></div>
-        <div class="carousel-item"><img src="IMG-20250522-WA0029.jpg"><p>La journée motuaire de Katulo Toussain</p></div>
-        <div class="carousel-item"><img src="IMG-20250605-WA0068.jpg"><p>un climat de guerre a katana</p></div>
-        <div class="carousel-item"><img src="Mérite NME_n.jpg"><p>Celebration du merita de La fondatrice</p></div>
-        <div class="carousel-item"><img src="IMG-20250505-WA0045.jpg"><p>Oeuvres humanitaires</p></div>
-        <div class="carousel-item"><img src="IMG-20241130-WA0018.jpg"><p>Mission de service de l'équipe Fonme</p></div>
-        <div class="carousel-item"><img src="1749298883383.jpg"><p>l'assistance de personnes du 3eme age</p></div>
-        <div class="carousel-item"><img src="1749299013940.jpg"><p>Entretien</p></div>
-        <div class="carousel-item"><img src="1749298964218.jpg"><p>Une rencontre familiale</p></div>
-        <div class="carousel-item"><img src="1749298795427.jpg"><p>l'accompagnement des entrepreneurs</p></div>
-        <div class="carousel-item"><img src="Essaie.jpg"><p>Une formation adequate</p></div>
-        <div class="carousel-item"><img src="IMG-20250607-WA0001.jpg"><p>Vive la pentecôte</p></div>
+        <div class="carousel-item"><a href="#finalites"><div class="image-wrapper"><img src="IMG-20250602-WA0054.jpg"></div></a><p>Assistance aux finalités</p></div>
+        <div class="carousel-item"><a href="#katulo"><div class="image-wrapper"><img src="IMG-20250522-WA0029.jpg"></div></a><p>Journée de Katulo Toussain</p></div>
+        <div class="carousel-item"><a href="#katana"><div class="image-wrapper"><img src="IMG-20250605-WA0068.jpg"></div></a><p>Climat de guerre à Katana</p></div>
+        <div class="carousel-item"><a href="#merite"><div class="image-wrapper"><img src="Mérite NME_n.jpg"></div></a><p>Mérite de la fondatrice</p></div>
+        <div class="carousel-item"><a href="#humanitaire"><div class="image-wrapper"><img src="IMG-20250505-WA0045.jpg"></div></a><p>Oeuvres humanitaires</p></div>
+        <div class="carousel-item"><a href="#fonme"><div class="image-wrapper"><img src="IMG-20241130-WA0018.jpg"></div></a><p>Mission Fonme</p></div>
       </div>
     </div>
   </section>
+
+  <!-- Sections d'ancrage pour chaque image -->
+  <div id="finalites"></div>
+  <div id="katulo"></div>
+  <div id="katana"></div>
+  <div id="merite"></div>
+  <div id="humanitaire"></div>
+  <div id="fonme"></div>
 
 </body>
 </html>
