--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
   <nav>
     <ul>
-      <li><a href="#">Accueil</a></li>
+      <li><a href="index.html">Accueil</a></li>
       <li class="has-submenu">
         <a href="#">Assignments</a>
         <ul class="submenu">
@@ -271,13 +271,13 @@
           <li><a href="#">Entrepreneuriat</a></li>
         </ul>
       </li>
-      <li><a href="#">A la une</a></li>
+      <li><a href="une.html">A la une</a></li>
       <li class="has-submenu">
-        <a href="#">A propos</a>
+        <a href="Propos.html">A propos</a>
         <ul class="submenu">
           <li><a href="#">Inscription</a></li>
-          <li><a href="#">Faire un don</a></li>
-          <li><a href="#">Biographie</a></li>
+          <li><a href="don.html">Faire un don</a></li>
+          <li><a href="Présentation.html">Biographie</a></li>
         </ul>
       </li>
     </ul>
