--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
       </li>
       <li><a href="une.html">A la une</a></li>
       <li class="has-submenu">
-        <a href="Propos.html">A propos</a>
+        <a href="propos.html">A propos</a>
         <ul class="submenu">
           <li><a href="#">Inscription</a></li>
           <li><a href="don.html">Faire un don</a></li>
-          <li><a href="Présentation.html">Biographie</a></li>
+          <li><a href="présentation.html">Biographie</a></li>
         </ul>
       </li>
     </ul>
