--- a/index.html
+++ b/index.html
@@ -313,10 +313,15 @@
   </section>
 
   <!-- Sections détaillées -->
-  <div id="finalites" class="ancre-section">
-    <h3>Assistance aux finalités</h3>
-    <p>La fondation intervient pour renforcer la réalisation des objectifs de développement à travers ses actions sur le terrain.</p>
-    <a href="#top">↑ Retour en haut</a>
+ <section id="finalites" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
+  <img src="IMG-20250602-WA0054.jpg" alt="Assistance aux finalités" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  <div style="margin-top: 10px; font-size: 14px; color: #666;">
+    🕒 Publié le <strong>18 Juin 2025 à 09h30</strong> par <strong>Samuel Naninkasa</strong>
+  </div>
+  <h3 style="margin-top: 10px; color: #001F3F;">Assistance aux finalités</h3>
+  <p style="text-align: justify; font-size: 16px; color: #333;">
+    Distribution de vivres et fournitures scolaires aux familles vulnérables. Cette action renforce l’engagement de la fondation dans l’accompagnement des communautés.</p>
+   <a href="#top">↑ Retour en haut</a>
   </div>
 
   <div id="katulo" class="ancre-section">
