--- a/index.html
+++ b/index.html
@@ -324,35 +324,62 @@
    <a href="#top">↑ Retour en haut</a>
   </div>
 
-  <div id="katulo" class="ancre-section">
-    <h3>Journée de Katulo Toussain</h3>
-    <p>Un événement commémoratif a été organisé en hommage à Katulo Toussain, marquant un moment fort de reconnaissance.</p>
+ <section id="katulo" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
+  <img src="IMG-20250522-WA0029.jpg" alt="Journée de Katulo Toussain" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  <div style="margin-top: 10px; font-size: 14px; color: #666;">
+    🕒 Publié le <strong>22 Mai 2025 à 15h00</strong> par <strong>Samuel Naninkasa</strong>
+  </div>
+  <h3 style="margin-top: 10px; color: #001F3F;">Journée de Katulo Toussain</h3>
+  <p style="text-align: justify; font-size: 16px; color: #333;">
+    Une célébration de l'héritage et des valeurs communautaires, en présence des anciens du village. Une journée marquée par des partages et des échanges intergénérationnels.</p>
     <a href="#top">↑ Retour en haut</a>
   </div>
 
-  <div id="katana" class="ancre-section">
-    <h3>Climat de guerre à Katana</h3>
-    <p>Des tensions préoccupantes à Katana ont conduit la fondation à entreprendre des actions humanitaires dans la zone affectée.</p>
-    <a href="#top">↑ Retour en haut</a>
+ <section id="katana" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
+  <img src="IMG-20250605-WA0068.jpg" alt="Climat de guerre à Katana" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  <div style="margin-top: 10px; font-size: 14px; color: #666;">
+    🕒 Publié le <strong>5 Juin 2025 à 12h15</strong> par <strong>Samuel Naninkasa</strong>
+  </div>
+  <h3 style="margin-top: 10px; color: #001F3F;">Climat de guerre à Katana</h3>
+  <p style="text-align: justify; font-size: 16px; color: #333;">
+    La Fondation dénonce les violences survenues dans la région de Katana et appelle à la paix et à la solidarité entre les peuples.</p>
+ <a href="#top">↑ Retour en haut</a>
   </div>
 
-  <div id="merite" class="ancre-section">
-    <h3>Mérite de la fondatrice</h3>
-    <p>Un prix d’honneur a été décerné à la fondatrice pour son engagement exceptionnel en faveur des populations vulnérables.</p>
-    <a href="#top">↑ Retour en haut</a>
+
+  <section id="merite" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
+  <img src="Mérite NME_n.jpg" alt="Mérite de la fondatrice" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  <div style="margin-top: 10px; font-size: 14px; color: #666;">
+    🕒 Publié le <strong>10 Juin 2025 à 08h00</strong> par <strong>Samuel Naninkasa</strong>
+  </div>
+  <h3 style="margin-top: 10px; color: #001F3F;">Mérite de la fondatrice</h3>
+  <p style="text-align: justify; font-size: 16px; color: #333;">
+    Un prix d’honneur remis à Elodie Muzigirwa pour son engagement inlassable dans les causes sociales, en reconnaissance de son dévouement.</p>
+   <a href="#top">↑ Retour en haut</a>
   </div>
 
-  <div id="humanitaire" class="ancre-section">
-    <h3>Oeuvres humanitaires</h3>
-    <p>La fondation œuvre chaque jour pour offrir assistance et espoir aux communautés marginalisées du pays.</p>
-    <a href="#top">↑ Retour en haut</a>
+  <section id="humanitaire" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
+  <img src="IMG-20250505-WA0045.jpg" alt="Oeuvres humanitaires" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  <div style="margin-top: 10px; font-size: 14px; color: #666;">
+    🕒 Publié le <strong>5 Mai 2025 à 16h45</strong> par <strong>Samuel Naninkasa</strong>
+  </div>
+  <h3 style="margin-top: 10px; color: #001F3F;">Œuvres humanitaires</h3>
+  <p style="text-align: justify; font-size: 16px; color: #333;">
+    Des actions de proximité menées dans les zones enclavées, avec distribution de kits de santé et de nourriture aux populations les plus touchées.</p>
+   <a href="#top">↑ Retour en haut</a>
   </div>
 
-  <div id="fonme" class="ancre-section">
-    <h3>Mission Fonme</h3>
-    <p>La mission Fonme a été lancée pour promouvoir l’accès à la formation, aux soins et à l’autonomisation durable.</p>
-    <a href="#top">↑ Retour en haut</a>
+  <section id="fonme" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
+  <img src="IMG-20241130-WA0018.jpg" alt="Mission Fonme" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  <div style="margin-top: 10px; font-size: 14px; color: #666;">
+    🕒 Publié le <strong>30 Novembre 2024 à 10h00</strong> par <strong>Samuel Naninkasa</strong>
   </div>
+  <h3 style="margin-top: 10px; color: #001F3F;">Mission Fonme</h3>
+  <p style="text-align: justify; font-size: 16px; color: #333;">
+    Une mission réussie pour la Fondation NME avec des partenaires locaux afin d’établir un nouveau centre d’appui éducatif pour les enfants déplacés.</p>
+   <a href="#top">↑ Retour en haut</a>
+  </div>
+  </section>
 
 </body>
 </html>
