--- a/index.html
+++ b/index.html
@@ -16,61 +16,60 @@
     }
 
     nav {
-      background-color: #001F3F;
-      padding: 70px 0;
-      position: sticky;
-      top: 0;
-      z-index: 999;
-      overflow: hidden;
-    }
+  background-color: #87CEFA; /* Bleu ciel */
+  height: auto;
+  min-height: 60px; /* S'assure que la hauteur minimale est bonne */
+  padding: 12px 0; /* Un peu de padding vertical */
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  overflow: visible; /* Permet d'afficher les sous-menus */
+}
 
-    nav ul {
-      list-style-type: none;
-      display: flex;
-      justify-content: center;
-      margin: 0;
-      padding: 0;
-    }
+nav ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
 
-    nav ul li {
-      margin: 0 15px;
-      position: relative;
-    }
+nav ul li {
+  margin: 0 15px;
+  position: relative;
+}
 
-    nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      padding: 8px 12px;
-      transition: background-color 0.3s;
-      display: block;
-      white-space: nowrap;
-    }
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 12px 16px;
+  display: block;
+  white-space: nowrap;
+}
 
-    nav ul li a:hover {
-      background-color: #007BFF;
-      border-radius: 4px;
-    }
+.has-submenu .submenu {
+  display: none;
+  position: absolute;
+  background-color: #007BFF;
+  top: 100%; /* S'affiche juste sous l'élément parent */
+  left: 0;
+  min-width: 160px;
+  z-index: 1000;
+  border-radius: 4px;
+  padding: 5px 0;
+}
 
-    .has-submenu .submenu {
-      display: none;
-      position: absolute;
-      background-color: #001F3F;
-      top: 100%;
-      left: 0;
-      min-width: 160px;
-      z-index: 1000;
-      border-radius: 4px;
-    }
+.has-submenu:hover .submenu {
+  display: block;
+}
 
-    .has-submenu:hover .submenu {
-      display: block;
-    }
-
-    .submenu li a {
-      padding: 10px 15px;
-      display: block;
-    }
+.submenu li a {
+  padding: 10px 15px;
+  display: block;
+  color: #fff;
+  font-size: 14px;
+}
 
     @media (max-width: 600px) {
       nav ul li {
