--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ nav ul li a {
       <li class="has-submenu">
         <a href="propos.html">A propos</a>
         <ul class="submenu">
-          <li><a href="#">Inscription</a></li>
+          <li><a href="https://fonme.github.io/Formulaire-de-la-FONME/">Inscription</a></li>
           <li><a href="don.html">Faire un don</a></li>
         </ul>
       </li>
