--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ nav ul li a {
           <li><a href="#">Santé</a></li>
         </ul>
       </li>
-      <li><a href="présentation .html">Biographie</a></li>
+      <li><a href="presentation .html">Biographie</a></li>
       <li class="has-submenu">
         <a href="propos.html">A propos</a>
         <ul class="submenu">
@@ -280,7 +280,7 @@ nav ul li a {
     </ul>
   </nav>
 
-  <a href="index.html" class="heart-button" title="Retour 💙"></a>
+  <a href="don.html" class="heart-button" title="Retour 💙"></a>
 
   <div class="video-mask-container">
     <div class="video-mask">
